# vibe-seller

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LICENSE  README.md  README.zh.md  README_en.md  install.sh  knowledge  pyproject.toml  pytest.ini  restart.sh  start.sh  stop.sh  ziniao_webdriver.bat
.claude/plans/: subtask-concurrency-limit.md
.github/: pull_request_template.md
.github/scripts/: doc_review.py
.github/workflows/: ai-integration.yml  ci.yml  doc-check.yml  release.yml  windows-installer.yml  windows-upgrade.yml
app/: README.md  auth.py  builtin_plugin.py  cli.py  config.py  database.py  env_options.py  errors.py  main.py  mcp_server.py  mcp_tool_schemas.py  netinfo.py  password.py  plan_states.py  platform.py  plugins.py  question_answers.py  task_delete.py  task_runner.py  task_runner_auto.py  task_runner_context.py  task_runner_exec.py  task_runner_followup.py  task_session_lifecycle.py  task_states.py  telemetry.py  telemetry_events.py  telemetry_tasks.py  update_check.py  version.py  vision.py  windows_update.py
app/ai/: __init__.py  ad_execution_targets.py  ad_negation_allowlist.py  base.py  bash_safety.py  claude_backend.py  claude_backend_hooks.py  claude_backend_manager.py  claude_backend_persist.py  claude_backend_stream.py  claude_backend_subagents.py  claude_backend_turns.py  claude_backend_utils.py  compaction.py  external_config.py  profile_validation.py  profiles.py  review_manifest.py  skill_gate_loader.py  skill_gate_utils.py  skill_review.py  task_status_reconcile.py  workspace_assistant.py
app/browser/: README.md  aux_browser.py  base.py  bh_daemons.py  bookmarks.py  cdp_mux_proxy.py  cdp_mux_routing.py  cdp_mux_types.py  cdp_mux_upstream.py  cdp_proxy.py  chrome.py  daemon_reaper.py  idle_sweep.py  manager.py  process_utils.py  proxy_env.py  web_wrapper.py  winchrome.py  wrapper.py  ziniao.py  ziniao_utils.py
app/channels/: base.py  email_discovery.py  email_poller.py  wecom_channel.py
app/email/: db.py  sender.py
app/events/: README.md  bus.py
app/events_system/: README.md  extractor.py  syncer.py
app/knowledge/: CATALOG.md  MANIFEST.txt  README.md
app/models/: README.md  __init__.py  app_settings.py  browser_session.py  email_account.py  event.py  event_activity.py  schedule.py  schedule_constants.py  schedule_state.py  screenshot.py  store.py  store_email_link.py  task.py  task_attachment.py  task_log.py  task_message.py  task_step.py  user.py  wecom_bot.py  ziniao_account.py
app/notifiers/: wecom.py
app/prompts/: TEMPLATES.md  __init__.py  design_system.md  dual_browser.md  event_extraction.md  reflection.md  scheduled_pretask.md  scheduled_watermark.md  ticktick_tools.md  vision_setup_breadcrumb.md  waiting_instruction.md  workspace_assistant.md
app/routers/: README.md  app_settings.py  attachments.py  auth.py  browser.py  channels.py  cron.py  dida365_oauth.py  email_accounts.py  email_polling.py  events.py  profiles.py  schedule_planning.py  schedules.py  screenshots.py  sse.py  stores.py  system.py  tasks.py  tasks_conversation.py  tasks_files.py  tasks_schedule_state.py  telemetry.py  users.py  vision.py  wecom_bots.py  workspace.py  workspace_assistant.py  ziniao_accounts.py
app/scheduler/: README.md  cron.py  email_sync.py  fanout.py  finalize_reaper.py  plan_reaper.py  stall_reaper.py  task_cleanup.py  task_queue.py  waiting.py
app/schemas/: README.md  email_account.py  event.py  schedule.py  store.py  task.py  user.py  wecom_bot.py  workspace.py  ziniao_account.py
app/skills/: DEPRECATED.md  MANIFEST.txt
app/skills_v2/: MANIFEST.txt
app/utils/: crypto.py  timezone.py
app/workspace/: catalog_validation.py  gws_integration.py  knowledge_sync.py  manager.py  skills_manager.py  skills_sync.py  store_data_migrate.py  store_seed.py  structured_stores.py  task_links.py  templates.py  venv_bootstrap.py
docker/: .dockerignore  Dockerfile  E2E_TESTING.md  docker-compose.yml  docker-entrypoint.sh
docs/: README.md  api.md  backend.md  browser-use-0.13-migration.md  browser.md  dev-guide.md  events.md  frontend.md  macos-setup.md  skill-review-mechanism.md  subsystems.md  tasks.md  telemetry.md  testing.md  vision.md  windows-setup.md  workspace.md  ziniao-concurrency.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  README.md  api.ts  index.css  main.tsx  router.tsx  taskStates.ts  types.ts  uuid.ts
installer/windows/: .gitignore  README.md  build.ps1  dialogs.py  install.ps1  make_icon.py  tray.py  vibe-seller.iss
scripts/: check_line_limit.sh  migrate_store_slugs.py  win-machine-setup.bat
tests/: README.md  conftest.py
tests/ai/: __init__.py  test_claude_backend.py  test_profile_validation_live.py  test_stop_failure.py
tests/e2e/: PROFILING.md  conftest.py  e2e_helpers.py  mock_cli.py  test_agent_sandbox.py  test_all_store.py  test_basic_flow.py  test_catalog_sync.py  test_chrome_concurrent.py  test_compaction.py  test_concurrent_tasks.py  test_conversation_lifecycle.py  test_conversation_ui.py  test_email_watermark_e2e.py  test_followup_review_scoping.py  test_llm_browser.py  test_profile_switch.py  test_session_reuse_profile.py  test_skill_prereq_hook.py  test_skill_save_reuse.py  test_skill_save_reuse_noon.py  test_stop_retry_continue.py  test_task_execution.py  test_turn_lifecycle_mock.py  test_vision_image_ui.py  test_ziniao_browser.py  test_ziniao_concurrency_recovery.py  ziniao_stability_manual.py
tests/fixtures/: fake_gws.sh
tests/integration/: __init__.py  conftest.py  test_browser_lifecycle.py  test_cdp_mux_browser_use.py  test_cdp_mux_proxy.py  test_chrome_cdp_mux.py  test_knowledge_sync.py  test_windows_process.py
tests/releases/: verify_install.sh
tests/unit/: __init__.py  test_ad_execution_fidelity.py  test_ad_gate_drilling_fixes.py  test_ad_negation_allowlist.py  test_ad_scope.py  test_agent_hooks.py  test_agent_loop.py  test_agent_model_env.py  test_agent_stop_all.py  test_agent_venv_path.py  test_auth_tokens.py  (+78 more)
(+329 files in other folders)
